--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,14 @@
+/* src/assets/css/App.css */
+:root {
+  --background-primary: #f8f8ff;
+  --primary-text: #7e8aa1;
+  --text-hover: #ffdac1;
+}
+
+*{
+  background-color: var(--background-primary);
+}
+
 .App {
   text-align: center;
 }
