added download link for resume and fixed all section titles to h1

--- a/src/assets/css/resume.css
+++ b/src/assets/css/resume.css
@@ -11,3 +11,12 @@
     margin-top: 125px;
     text-decoration: var(--text-hover) dotted underline;
 }
+
+.download {
+    text-decoration: none;
+    color: var(--primary-text);
+}
+
+.download:hover {
+    color: var(--text-hover);
+}
