--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -33,3 +33,9 @@
     padding: 20px;
     color: var(--primary-text);
 }
+
+@media screen and (max-width: 450px) {
+    .about-img {
+        max-width: 80%;
+    }
+}
