--- a/src/assets/css/project.css
+++ b/src/assets/css/project.css
@@ -53,3 +53,9 @@
 .project-image {
     border: 10px solid var(--background-sec) ;
 }
+
+.gitimg {
+    background-color: var(--background-sec);
+    max-width: 40px;
+    padding-left: 10px;
+}
