projects sizing and styling

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -8,6 +8,7 @@
 .footer-section {
     margin-top: 15px;
     position: fixed;
+    background-color: var(--background-primary);
 }
 
 .footer-text {
