--- a/src/assets/css/resume.css
+++ b/src/assets/css/resume.css
@@ -20,3 +20,13 @@
 .download:hover {
     color: var(--text-hover);
 }
+
+.prof-glance {
+    padding-top: 50px;
+    color: var(--primary-text);
+}
+
+.list-prof {
+    list-style: none;
+    color: var(--primary-text);
+}
