improvements to resume and projects, added alt props

--- a/src/assets/css/resume.css
+++ b/src/assets/css/resume.css
@@ -24,9 +24,11 @@
 .prof-glance {
     padding-top: 50px;
     color: var(--primary-text);
+    text-align: center;
 }
 
 .list-prof {
     list-style: none;
     color: var(--primary-text);
+    align-content: center;
 }
